fix: frontでstaticファイルが読み込めない問題の解決

--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,10 +1,14 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen      80;
+    server_name localhost;
 
     location / {
         root   /app/templates;
         index  index.html index.htm;
+    }
+
+    location /static {
+        alias /app/static/;
     }
 
     error_page   500 502 503 504  /50x.html;
