--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,6 @@ services:
     build: ./frontend
     volumes:
       - ./frontend:/app
+      - ./frontend/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8080:80"
