--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -11,6 +11,10 @@ server {
         alias /app/static/;
     }
 
+    location /favicon.ico {
+        alias /app/static/resources/favicon.ico;
+    }
+
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
