--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     image: postgres
     ports:
       - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      # POSTGRES_DB: db_name
     container_name: db
   uwsgi:
     build: ./backend
@@ -24,3 +28,5 @@ services:
     depends_on:
       - uwsgi
     container_name: nginx
+    environment:
+      TZ: "Asia/Tokyo"
