feat: nginx, default.conf

--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -7,6 +7,10 @@ server {
         index  index.html index.htm;
     }
 
+    location /templates {
+        alias /app/templates/;
+    }
+
     location /static {
         alias /app/static/;
     }
@@ -20,3 +24,32 @@ server {
         root   /usr/share/nginx/html;
     }
 }
+# server {
+#     listen 443 ssl;
+#     ssl_certificate     /etc/letsencrypt/live/puuuii.tk/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/puuuii.tk/privkey.pem;
+
+#     server_name         localhost;
+
+#     location / {
+#         root   /app/templates;
+#         index  index.html index.htm;
+#     }
+
+#     location /templates {
+#         alias /app/templates/;
+#     }
+
+#     location /static {
+#         alias /app/static/;
+#     }
+
+#     location /favicon.ico {
+#         alias /app/static/resources/favicon.ico;
+#     }
+
+#     error_page   500 502 503 504  /50x.html;
+#     location = /50x.html {
+#         root   /usr/share/nginx/html;
+#     }
+# }
