--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -24,32 +24,32 @@ server {
         root   /usr/share/nginx/html;
     }
 }
-# server {
-#     listen 443 ssl;
-#     ssl_certificate     /etc/letsencrypt/live/puuuii.tk/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/puuuii.tk/privkey.pem;
+server {
+    listen 443 ssl;
+    ssl_certificate     /etc/letsencrypt/live/puuuii.tk/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/puuuii.tk/privkey.pem;
 
-#     server_name         localhost;
+    server_name         localhost;
 
-#     location / {
-#         root   /app/templates;
-#         index  index.html index.htm;
-#     }
+    location / {
+        root   /app/templates;
+        index  index.html index.htm;
+    }
 
-#     location /templates {
-#         alias /app/templates/;
-#     }
+    location /templates {
+        alias /app/templates/;
+    }
 
-#     location /static {
-#         alias /app/static/;
-#     }
+    location /static {
+        alias /app/static/;
+    }
 
-#     location /favicon.ico {
-#         alias /app/static/resources/favicon.ico;
-#     }
+    location /favicon.ico {
+        alias /app/static/resources/favicon.ico;
+    }
 
-#     error_page   500 502 503 504  /50x.html;
-#     location = /50x.html {
-#         root   /usr/share/nginx/html;
-#     }
-# }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+}
