--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       POSTGRES_PASSWORD: postgres
       # POSTGRES_DB: db_name
     container_name: db
+    networks:
+      - my-network
   uwsgi:
     build: ./backend
     volumes:
@@ -18,6 +20,8 @@ services:
     environment:
       TZ: "Asia/Tokyo"
     container_name: uwsgi
+    networks:
+      - my-network
   nginx:
     build: ./frontend
     volumes:
@@ -31,3 +35,8 @@ services:
     container_name: nginx
     environment:
       TZ: "Asia/Tokyo"
+    networks:
+      - my-network
+networks:
+  my-network:
+    driver: bridge
